Closed Bug 205582 Opened 23 years ago Closed 23 years ago

NSPR maps EHOSTUNREACH to PR_UNKNOWN_ERROR on Unix

Categories

(NSPR :: NSPR, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: wtc, Assigned: wtc)

References

Details

Attachments

(1 file)

NSPR maps EHOSTUNREACH to PR_UNKNOWN_ERROR on Unix. That OS error should be mapped to PR_HOST_UNREACHABLE_ERROR.
Attached patch Proposed patchSplinter Review
Attachment #123221 - Flags: review?(darin)
Comment on attachment 123221 [details] [diff] [review] Proposed patch looks good... i will need to modify the socket transport code to respond to this error code. patch for that coming up...
Attachment #123221 - Flags: review?(darin) → review+
Comment on attachment 123221 [details] [diff] [review] Proposed patch Requesting mozilla 1.4 final approval. This is a low risk patch. Note that NSPR patches do not require a superreview.
Attachment #123221 - Flags: approval1.4?
Blocks: 199173
drivers: this patch is required to fix bug 199173, which would be a good bug to have fixed in 1.4 final.
Flags: blocking1.4?
Comment on attachment 123221 [details] [diff] [review] Proposed patch a=asa (on behalf of drivers) for checkin to 1.4
Attachment #123221 - Flags: approval1.4? → approval1.4+
Fix checked in on the NSPR trunk (NSPR 4.4) and the NSPRPUB_PRE_4_2_CLIENT_BRANCH (mozilla 1.4 final).
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Target Milestone: --- → 4.4
Flags: blocking1.4?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: