Bug 205582: map EHOSTUNREACH to PR_HOST_UNREACHABLE_ERROR on Unix. r=darin.